# usql

./: Cargo.toml  LICENSE-MIT  Makefile  README.md
.github/workflows/: coverage.yml  style.yml  test.yml
scripts/keyword/: mariadb.txt  mysql.txt  mysql_non_reserved.txt  mysql_reserved.txt  postgresql_non_reserved.txt  postgresql_reserved.txt  sql2016.txt  sql2016_reserved.txt  sql_keywords.sh  total.txt
usql/: Cargo.toml
usql-ast/: Cargo.toml
usql-ast/src/: lib.rs  utils.rs
usql-ast/src/dialect/: mod.rs
usql-ast/src/expression/: function.rs  mod.rs  operator.rs  query.rs  table.rs
usql-ast/src/expression/query/: mod.rs  table.rs
usql-ast/src/statement/: ddl.rs  dml.rs  mod.rs  transaction.rs
usql-ast/src/types/: data_type.rs  ident.rs  literal.rs  mod.rs  object.rs  value.rs
usql-bench/: Cargo.toml
usql-bench/benches/: parse.rs  tokenize.rs
usql-core/: Cargo.toml
usql-core/examples/: custom.rs
usql-core/src/: dialect.rs  keyword.rs  keywords.rs  lib.rs  macros.rs  tokens.rs
usql-core/src/ansi/: keyword.rs  mod.rs
usql-core/src/mysql/: keyword.rs  mod.rs
usql-core/src/postgres/: keyword.rs  mod.rs
usql-core/src/sqlite/: mod.rs
usql-lexer/: Cargo.toml
usql-lexer/examples/: custom.rs  simple.rs
usql-lexer/src/: config.rs  error.rs  lexer.rs  lib.rs  tokens.rs
usql-lexer/src/keywords/: mariadb.rs  mod.rs  postgresql.rs
usql-next/: Cargo.toml
usql-next/src/: dialect.rs  error.rs  lib.rs  macros.rs  parse.rs  span.rs
usql-next/src/ansi/: keyword.rs
usql-next/src/ast/: mod.rs
usql-next/src/ast/expression/: mod.rs
usql-next/src/lexer/: mod.rs  token.rs
usql-next/src/token/: keyword.rs  mod.rs  punct.rs
usql-parser/: Cargo.toml
usql-parser/src/: error.rs  lib.rs  peek.rs
usql-parser/src/parser/: mod.rs  types.rs
usql-parser/src/parser/expression/: mod.rs
usql-parser/src/parser/expression/query/: mod.rs  table.rs
usql-parser/src/parser/statement/: ddl.rs  dml.rs  mod.rs  transaction.rs
usql/examples/: custom.rs  simple.rs
usql/src/: error.rs  keywords.rs  lexer.rs  lib.rs  macros.rs  tokens.rs
usql/src/ansi/: keyword.rs
usql/src/ast/: mod.rs
usql/src/ast/expression/: function.rs  mod.rs  operator.rs
usql/src/ast/expression/query/: mod.rs  table.rs
usql/src/ast/statement/: ddl.rs  dml.rs  mod.rs  transaction.rs
usql/src/ast/types/: data_type.rs  ident.rs  literal.rs
usql/src/lexer/: mod.rs
usql/src/mysql/: keyword.rs
usql/src/parser/: error.rs  mod.rs  peek.rs  types.rs
usql/src/parser/expression/: mod.rs
usql/src/parser/expression/query/: mod.rs  table.rs
usql/src/parser/statement/: ddl.rs  dml.rs  mod.rs  transaction.rs
usql/src/sqlite/: keyword.rs  mod.rs
