[package]
name = "usql-lexer"
version = "0.1.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT/Apache-2.0"

documentation = "https://docs.rs/usql-lexer"
repository = "https://github.com/koushiro/usql"
description = "Universal SQL Lexer"

[features]
default = []

[dependencies]

[dev-dependencies]
