[package]
name = "usql-lexer"
version = "0.0.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2021"
rust-version = "1.56"
readme = "README.md"
license = "Apache-2.0"

documentation = "https://docs.rs/usql-lexer"
repository = "https://github.com/koushiro/usql"
description = "Universal SQL Lexer"

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
