[package]
name = "usql-lexer"
version = "0.0.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2021"
rust-version = "1.56"
readme = "README.md"
license = "Apache-2.0"

documentation = "https://docs.rs/usql-lexer"
repository = "https://github.com/koushiro/usql"
description = "Universal SQL lexer"

[features]
default = ["std"]
std = ["usql-core/std"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"], optional = true }

usql-core = { path = "../usql-core", default-features = false }

[dev-dependencies]
usql-core = { path = "../usql-core", default-features = false, features = ["postgres", "mysql", "sqlite"] }
