[package]
name = "usql-parser"
version = "0.1.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"

documentation = "https://docs.rs/usql-parser"
repository = "https://github.com/koushiro/usql"
description = "Universal SQL parser"

[features]
default = ["std"]
std = ["usql-lexer/std"]

[dependencies]
usql-lexer = { version = "0.1", path = "../usql-lexer", default-features = false }

[dev-dependencies]
