[package]
name = "usql-parser"
version = "0.0.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2021"
rust-version = "1.56"
readme = "README.md"
license = "Apache-2.0"

documentation = "https://docs.rs/usql-parser"
repository = "https://github.com/koushiro/usql"
description = "Universal SQL parser"

[features]
default = ["std"]
std = [
  "usql-core/std",
  "usql-ast/std",
]

[dependencies]
usql-core = { path = "../usql-core", default-features = false }
usql-ast = { path = "../usql-ast", default-features = false }

[dev-dependencies]
