[package]
name = "usql"
version = "0.0.0"
authors = ["koushiro <koushiro.cqx@gmail.com>"]
edition = "2021"
rust-version = "1.56"
readme = "README.md"
license = "Apache-2.0"

documentation = "https://docs.rs/usql"
repository = "https://github.com/koushiro/usql"
description = "Universal SQL Lexer and Parser"

[features]
default = ["std"]
std = []
serde = ["usql-ast/serde", "usql-core/serde"]

ansi = ["usql-ast/ansi", "usql-core/ansi", "usql-parser/ansi"]
mysql = ["usql-ast/mysql", "usql-core/mysql", "usql-parser/mysql"]
postgres = ["usql-ast/postgres", "usql-core/postgres", "usql-parser/postgres"]
sqlite = ["usql-ast/sqlite", "usql-core/sqlite", "usql-parser/sqlite"]

[dependencies]
usql-ast = { path = "../usql-ast", default-features = false }
usql-core = { path = "../usql-core", default-features = false }
usql-lexer = { path = "../usql-lexer", default-features = false }
usql-parser = { path = "../usql-parser", default-features = false }
